# RustWeb3

./: README.md
backend/: Cargo.toml  SensorStorage.json  gnjr.env
backend/src/: blockchain.rs  main.rs  sht20.rs  tcp_server.rs
dapp_frontend/: package.json
dapp_frontend/src/: App.jsx
qt_gui/: main.py
